Exclude network lab api tests from build for now
tests that use labapi have been excluded from build as AutomationRunner cert is not available on travis

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -80,6 +80,13 @@ android {
             outputFileName = fileName
         }
     }
+
+    testOptions {
+        unitTests.all {
+            exclude 'com/microsoft/identity/client/robolectric/tests/AcquireTokenNetworkTest.class'
+            exclude 'com/microsoft/identity/client/robolectric/tests/B2CTest.class'
+        }
+    }
 }
 
 // Task to generate javadoc
