Adds support for toggling LogCat

--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -19,7 +19,8 @@
   },
   "logging": {
     "pii_enabled" : false,
-    "log_level" : "WARNING"
+    "log_level" : "WARNING",
+    "logcat_enabled" : false
   },
   "shared_device_mode_supported": false,
   "account_mode": "MULTIPLE",
