--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 include ':msal', ':common', ':keyvault', ':labapi', ':testutils'
 project(':common').projectDir = new File('common/common')
 project(':keyvault').projectDir = new File('common/keyvault')
-project(':labapi').projectDir = new File('commmon/labapi')
+project(':labapi').projectDir = new File('common/labapi')
 project(':testutils').projectDir = new File('common/testutils')
 
 // test apps
