--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -125,9 +125,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '1.0.7', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '1.0.7-NoAndroidX', changing: true)
 
-    distApi("com.microsoft.identity:common:1.0.7") {
+    distApi("com.microsoft.identity:common:1.0.7-NoAndroidX") {
         transitive = false
     }
 }
