Refactor e2e and unit tests
- Rename `roboletric` test package to e2e
- Add mocked test suite to run all e2e mocked tests
- Disable individual e2e tests on builds as we will run them from the suite
- Clean up OperationParametersTest and ClientCapabilitiesTest

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -83,7 +83,8 @@ android {
 
     testOptions {
         unitTests.all {
-            exclude 'com/microsoft/identity/client/robolectric/tests/network/'
+            // Disabling individual e2e tests, as tests will be run from the e2e/suites package
+            exclude 'com/microsoft/identity/client/e2e/tests/'
         }
     }
 }
