--- a/pop-benchmarker/build.gradle
+++ b/pop-benchmarker/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appCompatVersion"
     implementation "com.nimbusds:nimbus-jose-jwt:7.8"
+    implementation "androidx.security:security-crypto:1.0.0-alpha02"
 }
