--- a/pop-benchmarker/src/main/AndroidManifest.xml
+++ b/pop-benchmarker/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.microsoft.testing.popbenchmarker">
+
+    <uses-sdk tools:overrideLibrary="androidx.security" />
 
     <application
         android:allowBackup="true"
