--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -1,7 +1,7 @@
 {
-  "client_id" : "4b0db8c2-9f26-4417-8bde-3f0e3656f8e0",
+  "client_id" : "9ba1a5c7-f17a-4de9-a1f1-6178c8d51223",
   "authorization_user_agent" : "DEFAULT",
-  "redirect_uri" : "msauth://com.microsoft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
+  "redirect_uri" : "msauth://com.microsoft.intune/1L4Z9FJCgn5c0VLhyAxC5O9LdlE%3D",
   "multiple_clouds_supported":true,
   "client_capabilities": "CP1",
   "authorities" : [
