--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -34,6 +34,14 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        debug {
+            storeFile file("./debug.keystore")
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -55,12 +63,19 @@ android {
             versionNameSuffix "-dist"
             resValue("string", "application_name", "msal-dist")
         }
+        prod {
+            applicationIdSuffix ".prod"
+            versionNameSuffix "-prod"
+            resValue("string", "application_name", "msal-prod")
+        }
     }
 }
 
 dependencies {
     // Compile Dependency
-    implementation project(':msal')
+    localImplementation project(':msal')
+    distImplementation project(':msal')
+    prodImplementation 'com.microsoft.identity.client:msal:1.0.+'
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appCompatVersion"
     implementation "androidx.legacy:legacy-support-v4:$rootProject.ext.legacySupportV4Version"
