--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -83,8 +83,12 @@ android {
 
     testOptions {
         unitTests.all {
-            // Disabling individual e2e tests, as tests will be run from the e2e/suites package
-            exclude 'com/microsoft/identity/client/e2e/tests/'
+            if (!project.hasProperty('labtest')) {
+                // Disabling network based e2e tests if labtest not specified in build
+                // to turn on pass labtest as build param
+                // example: ./gradlew testLocalDebugUnitTest -Plabtest
+                exclude 'com/microsoft/identity/client/e2e/tests/network'
+            }
         }
     }
 }
