--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -140,9 +140,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '1.0.7-hf1', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '1.0.12', changing: true)
 
-    distApi("com.microsoft.identity:common:1.0.7-hf1") {
+    distApi("com.microsoft.identity:common:1.0.12") {
         transitive = false
     }
 }
