--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -4,19 +4,24 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.microsoft.identity.client.sample"
-        minSdkVersion rootProject.ext.minSdkVersion
+        applicationId "com.microsoft.identity.client.samplea"
+        minSdkVersion 18
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testApplicationId "com.microsoft.identity.client.sample.local"
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            multiDexKeepProguard file('proguard-multidex-rules.pro')
         }
     }
     lintOptions {
@@ -37,15 +42,35 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            java.srcDirs = ['src/main/java']
+        }
+
+        androidTest {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            res.srcDirs = ['src/main/res']
+        }
+    }
+
 }
 
 dependencies {
     // Compile Dependency
-    localImplementation project(':msal')
+    localImplementation 'com.microsoft.identity.client:msal:1.0.+'
     distImplementation 'com.microsoft.identity.client:msal:1.0.+'
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appCompatVersion"
     implementation "androidx.legacy:legacy-support-v4:$rootProject.ext.legacySupportV4Version"
     implementation "com.google.android.material:material:$rootProject.ext.materialVersion"
+    androidTestImplementation (project(':testutils'))
+    androidTestImplementation "androidx.test:core:$rootProject.ext.androidxTestCoreVersion"
+    androidTestImplementation "androidx.test.ext:junit:$rootProject.ext.androidxJunitVersion"
+    // Set this dependency to use JUnit 4 rules
+    androidTestImplementation "androidx.test:rules:$rootProject.rulesVersion"
+    androidTestImplementation "org.mockito:mockito-android:$rootProject.ext.mockitoAndroidVersion"
+    //androidTestImplementation 'androidx.test.espresso:espresso-web:3.2.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 }
