Fix version task

--- a/msal/versioning/version_tasks.gradle
+++ b/msal/versioning/version_tasks.gradle
@@ -9,16 +9,16 @@ def getVersionProps() {
     return versionProps
 }
 
-private Integer getVersionNamePatch() {
-    return (getVersionProps()['versionName'] =~ /\d+/)[2].toInteger()
+private String getVersionNamePatch() {
+    return (getVersionProps()['versionName'] =~ /[^.]+/)[2].toString()
 }
 
 private Integer getVersionNameMinor() {
-    return (getVersionProps()['versionName'] =~ /\d+/)[1].toInteger()
+    return (getVersionProps()['versionName'] =~ /[^.]/)[1].toInteger()
 }
 
 private Integer getVersionNameMajor() {
-    return (getVersionProps()['versionName'] =~ /\d+/)[0].toInteger()
+    return (getVersionProps()['versionName'] =~ /[^.]/)[0].toInteger()
 }
 
 ext.getAppVersionCode = {
