--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -4,14 +4,14 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.microsoft.identity.client.samplea"
+        applicationId "com.microsoft.identity.client.sample"
         minSdkVersion 18
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testApplicationId "com.microsoft.identity.client.sample.local"
+        //testApplicationId "com.msft.identity.client.sample.local"
     }
 
     buildTypes {
@@ -58,7 +58,7 @@ android {
 
 dependencies {
     // Compile Dependency
-    localImplementation 'com.microsoft.identity.client:msal:1.0.+'
+    localImplementation project(':msal')
     distImplementation 'com.microsoft.identity.client:msal:1.0.+'
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
