--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -125,9 +125,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '1.0.0-RC5', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '1.0.0-RC5-teamsHf', changing: true)
 
-    distApi("com.microsoft.identity:common:1.0.0-RC5") {
+    distApi("com.microsoft.identity:common:1.0.0-RC5-teamsHf") {
         transitive = false
     }
 }
