--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -12,6 +12,8 @@
   "minimum_required_broker_protocol_version": "3.0",
   "multiple_clouds_supported": false,
   "broker_redirect_uri_registered": true,
+  "web_view_zoom_controls_enabled": true,
+  "web_view_zoom_enabled": true,
   "environment": "Production",
   "http": {
     "connect_timeout": 10000,
