--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:name="com.microsoft.identity.client.testapp.MsalSampleApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
