Use same redirect uri for both AAD and B2C msal config

--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -28,7 +28,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.microsoft.identity.client.sample"
+        applicationId "com.msft.identity.client.sample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
