--- a/testapps/testapp/src/main/res/raw/msal_b2c_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_b2c_config.json
@@ -1,6 +1,6 @@
 {
   "client_id" : "e3b9ad76-9763-4827-b088-80c7a7888f79",
-  "redirect_uri" : "msale3b9ad76-9763-4827-b088-80c7a7888f79://auth",
+  "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
   "authorities" : [
     {
       "type": "B2C",
