--- a/testapps/testapp/src/main/res/raw/msal_config_browser.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_browser.json
@@ -1,13 +1,20 @@
 {
   "client_id" : "4b0db8c2-9f26-4417-8bde-3f0e3656f8e0",
   "authorization_user_agent" : "BROWSER",
-  "redirect_uri" : "msauth://com.microsoft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
+  "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
+  "multiple_clouds_supported":true,
+  "client_capabilities": "CP1",
   "authorities" : [
     {
       "type": "AAD",
       "audience": {
-        "type": "AzureADandPersonalMicrosoftAccount"
+        "type": "AzureADMultipleOrgs"
       }
     }
-  ]
+  ],
+  "telemetry": {
+    "pii_enabled": true,
+    "notify_on_failure_only": false,
+    "debug_enabled": true
+  }
 }
