--- a/testapps/testapp/src/main/res/raw/msal_config_fairfax.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_fairfax.json
@@ -2,14 +2,11 @@
   "client_id" : "cb7faed4-b8c0-49ee-b421-f5ed16894c83",
   "authorization_user_agent" : "DEFAULT",
   "redirect_uri" : "msalcb7faed4-b8c0-49ee-b421-f5ed16894c83://auth",
-  "multiple_clouds_supported":true,
   "broker_redirect_uri_registered": true,
   "authorities" : [
     {
       "type": "AAD",
-      "audience": {
-        "type": "AzureADandPersonalMicrosoftAccount"
-      }
+      "authority_url": "https://login.microsoftonline.us/common"
     }
   ]
 }
