--- a/testapps/testapp/src/main/res/raw/msal_config_blackforest.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_blackforest.json
@@ -1,7 +1,7 @@
 {
-  "client_id" : "cb7faed4-b8c0-49ee-b421-f5ed16894c83",
+  "client_id" : "7f6c2a60-95d5-4525-b99c-103593fb9a57",
   "authorization_user_agent" : "DEFAULT",
-  "redirect_uri" : "msalcb7faed4-b8c0-49ee-b421-f5ed16894c83://auth",
+  "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
   "authorities" : [
     {
       "type": "AAD",
