--- a/testapps/testapp/src/main/res/raw/msal_config_fairfax.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_fairfax.json
@@ -1,8 +1,7 @@
 {
-  "client_id" : "cb7faed4-b8c0-49ee-b421-f5ed16894c83",
+  "client_id" : "fd4c40ca-988f-4b4a-a514-9e583fa1bc04",
   "authorization_user_agent" : "DEFAULT",
-  "redirect_uri" : "msalcb7faed4-b8c0-49ee-b421-f5ed16894c83://auth",
-  "broker_redirect_uri_registered": true,
+  "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
   "authorities" : [
     {
       "type": "AAD",
