--- a/testapps/testapp/src/main/res/raw/msal_config_mooncake.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_mooncake.json
@@ -1,7 +1,7 @@
 {
-  "client_id" : "cb7faed4-b8c0-49ee-b421-f5ed16894c83",
+  "client_id" : "920cd637-4ca3-496b-8a6a-f7c6ca1b2b82",
   "authorization_user_agent" : "DEFAULT",
-  "redirect_uri" : "msalcb7faed4-b8c0-49ee-b421-f5ed16894c83://auth",
+  "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
   "authorities" : [
     {
       "type": "AAD",
