--- a/testapps/testapp/src/main/res/raw/msal_config_instance_aware.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_instance_aware.json
@@ -6,7 +6,7 @@
   "authorities" : [
     {
       "type": "AAD",
-      "authority_url": "https://login.microsoftonline.us/common"
+      "authority_url": "https://login.microsoftonline.com/common"
     }
   ]
 }
