Update test app (#944)
* WIP

* WIP - need to register app in each cloud

* Add app registration

* Add copy button

* Add clarity on UI

* Address comments

* Clean up code

* Add instance_aware_organization:

* Fix backstack issue

* Use class name as tag

* Add POP options

--- a/testapps/testapp/src/main/res/raw/msal_config_instance_aware_organization.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_instance_aware_organization.json
@@ -3,18 +3,10 @@
   "authorization_user_agent" : "DEFAULT",
   "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
   "multiple_clouds_supported":true,
-  "client_capabilities": "CP1",
   "authorities" : [
     {
       "type": "AAD",
-      "audience": {
-        "type": "AzureADMultipleOrgs"
-      }
+      "authority_url": "https://login.microsoftonline.com/organization"
     }
-  ],
-  "telemetry": {
-    "pii_enabled": true,
-    "notify_on_failure_only": false,
-    "debug_enabled": true
-  }
+  ]
 }
