--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -144,7 +144,7 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.2-SNAPSHOT', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.2', changing: true)
 
     distApi("com.microsoft.identity:common:2.0.2") {
         transitive = false
