Update common to support dual screen

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -126,6 +126,7 @@ dependencies {
     implementation "androidx.browser:browser:$rootProject.ext.browserVersion"
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     implementation "com.nimbusds:nimbus-jose-jwt:$rootProject.ext.nimbusVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$rootProject.ext.constraintLayoutVersion"
 
     // test dependencies
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
