--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -17,6 +17,7 @@ ext {
     annotationVersion = "1.0.0"
     appCompatVersion = "1.0.2"
     browserVersion = "1.0.0"
+    constraintLayoutVersion = "1.1.3"
     dexmakerMockitoVersion = "1.4"
     espressoCoreVersion = "3.1.0"
     gsonVersion = "2.8.5"
