--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -147,7 +147,7 @@ dependencies {
 
     snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.3-SNAPSHOT', changing: true)
 
-    distApi("com.microsoft.identity:common:2.0.2") {
+    distApi("com.microsoft.identity:common:2.0.3-devsnap_3-31-20") {
         transitive = false
     }
 }
