--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -147,7 +147,7 @@ dependencies {
 
     snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.6-RC1', changing: true)
 
-    distApi("com.microsoft.identity:common:2.0.6-RC!") {
+    distApi("com.microsoft.identity:common:2.0.6-RC1") {
         transitive = false
     }
 }
