--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -144,9 +144,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.2', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.2-hf1', changing: true)
 
-    distApi("com.microsoft.identity:common:2.0.2") {
+    distApi("com.microsoft.identity:common:2.0.2-hf1") {
         transitive = false
     }
 }
