Power optimization flag changes

--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -15,6 +15,7 @@
   "web_view_zoom_controls_enabled": true,
   "web_view_zoom_enabled": true,
   "environment": "Production",
+  "power_opt_check_for_network_req_enabled": true,
   "http": {
     "connect_timeout": 10000,
     "read_timeout": 30000
