--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -145,9 +145,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.7-RC1', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.7', changing: true)
 
-    distApi("com.microsoft.identity:common:2.0.7-RC1") {
+    distApi("com.microsoft.identity:common:2.0.7") {
         transitive = false
     }
 }
