Automate msal us gov sov cloud test plan

--- a/msalautomationapp/src/main/res/raw/msal_config_instance_aware_organization.json
+++ b/msalautomationapp/src/main/res/raw/msal_config_instance_aware_organization.json
@@ -6,7 +6,7 @@
   "authorities" : [
     {
       "type": "AAD",
-      "authority_url": "https://login.microsoftonline.com/organization"
+      "authority_url": "https://login.microsoftonline.com/organizations"
     }
   ]
 }
