Move ui test utilities to its own module

--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -53,8 +53,6 @@ android {
 
     testBuildType = "release"
 
-
-
     lintOptions {
         abortOnError false
     }
@@ -98,18 +96,14 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appCompatVersion"
     implementation "androidx.legacy:legacy-support-v4:$rootProject.ext.legacySupportV4Version"
     implementation "com.google.android.material:material:$rootProject.ext.materialVersion"
-    compileOnly "org.projectlombok:lombok:$rootProject.ext.lombokVersion"
-    annotationProcessor "org.projectlombok:lombok:$rootProject.ext.lombokVersion"
     androidTestImplementation "androidx.test:core:$rootProject.ext.androidxTestCoreVersion"
     androidTestImplementation "androidx.test.ext:junit:$rootProject.ext.androidxJunitVersion"
     // Set this dependency to use JUnit 4 rules
     androidTestImplementation "androidx.test:rules:$rootProject.rulesVersion"
     androidTestImplementation "org.mockito:mockito-android:$rootProject.ext.mockitoAndroidVersion"
-    //androidTestImplementation 'androidx.test.espresso:espresso-web:3.2.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation(project(":testutils"))
+    androidTestImplementation(project(":uiautomationutilities"))
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestUtil 'androidx.test:orchestrator:1.2.0'
-    androidTestCompileOnly "org.projectlombok:lombok:$rootProject.ext.lombokVersion"
-    androidTestAnnotationProcessor "org.projectlombok:lombok:$rootProject.ext.lombokVersion"
 }
