--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -277,7 +277,14 @@ publishing {
 }
 
 tasks.whenTaskAdded { task ->
-    if (task.name == 'assembleDebug' || task.name == 'assembleRelease') {
-        task.dependsOn 'checkstyle', 'pmd', 'lint', 'javadocJar', 'sourcesJar'
+    if (task.name.contains('assemble')) {
+        task.dependsOn 'checkstyle', 'pmd'
+    }
+
+    if (task.name.contains('assemble')
+        && !task.name.contains('Snapshot')
+        && !task.name.contains('Test')
+        && !task.name.contains('Local')) {
+        task.dependsOn 'lint', 'javadocJar', 'sourcesJar'
     }
 }
