--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -150,7 +150,7 @@ dependencies {
 
     snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '2.0.15-SNAPSHOT', changing: true)
 
-    distApi("com.microsoft.identity:common:2.0.15") {
+    distApi("com.microsoft.identity:common:2.1.0-DCFCut") {
         transitive = false
     }
 }
