--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -78,7 +78,7 @@ android {
 dependencies {
     // Compile Dependency
     localImplementation project(':msal')
-    distImplementation 'com.microsoft.identity.client:msal:1.+'
+    distImplementation 'com.microsoft.identity.client:msal:1.6.0-DCFCut'
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appCompatVersion"
     implementation "androidx.legacy:legacy-support-v4:$rootProject.ext.legacySupportV4Version"
