swap feed order

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ allprojects {
         google()
         mavenLocal()
         jcenter()
+        // Adding here because Travis cannot access AndroidADAL feed.
+        maven {
+            url 'https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1'
+            name 'Duo-SDK-Feed'
+        }
         maven {
             name "vsts-maven-adal-android"
             url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
@@ -27,11 +32,6 @@ allprojects {
                 username project.vstsUsername
                 password project.vstsPassword
             }
-        }
-        // Adding here because Travis cannot access AndroidADAL feed.
-        maven {
-            url 'https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed%40Local/maven/v1'
-            name 'Duo-SDK-Feed@Local'
         }
     }
 }
