--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -148,9 +148,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.0.0-SNAPSHOT', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.0.1', changing: true)
 
-    distApi("com.microsoft.identity:common:3.0.1-RC3") {
+    distApi("com.microsoft.identity:common:3.0.1") {
         transitive = false
     }
 }
