--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -150,7 +150,7 @@ dependencies {
 
     snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.0.1', changing: true)
 
-    distApi("com.microsoft.identity:common:3.0.1") {
+    distApi("com.microsoft.identity:common:3.0.2-RC1") {
         transitive = false
     }
 }
